# showcase-twitter-clone

./: .gitignore  CICD.md  DEPLOYMENT.md  PYTHONANYWHERE_DEPLOYMENT.md  README.md  TESTING.md  package-lock.json  package.json  pythonanywhere_setup.md  pythonanywhere_update.sh
backend/: .env.example  .python-version  Dockerfile.prod  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/authentication/: models.py  serializers.py  tests.py  throttling.py  urls.py  utils.py  validators.py  views.py
backend/authentication/migrations/: 0001_initial.py  0002_remove_failedloginattempt_username_and_more.py  0003_create_demo_user.py
backend/authentication/templates/email/: email_verification.html  (+3 more)
backend/core/: debug_cors.py  debug_jwt.py  middleware.py  settings.py  urls.py  wsgi.py
backend/follows/: models.py  urls.py
backend/follows/migrations/: 0001_initial.py
backend/notifications/: models.py  urls.py
backend/notifications/migrations/: 0001_initial.py
backend/tests/: conftest.py
backend/tests/api/: auth_endpoints_test.py  test_tweets.py
backend/tweets/: admin.py  models.py  serializers.py  urls.py  views.py
backend/tweets/migrations/: 0001_initial.py  0002_tweet_comments_count_comment.py  0003_comment_media_count_commentmediaattachment.py  0004_like_retweet.py
backend/users/: models.py  serializers.py  urls.py
backend/users/migrations/: 0001_initial.py  0002_alter_user_email.py  0003_user_last_activation.py  0004_user_is_demo_user.py  0005_auto_20250406_1431.py  0006_user_tweets_count.py  0007_user_is_verified.py
(+86 files in other folders)
